--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 						<h3>The Problem</h3>
 					</section>
 					<section> 
+						I'm an attacker.<p>
+						I want to take over accounts on your website.<p>
+					</section>
+					<section>
 						api.frowning.wtf<p>
 						www.frowning.wtf<p>
 					</section>
@@ -78,7 +82,7 @@
 						Let's talk about two common attacks
 					</section>
 					<section>
-						What is XSS?<p>
+						XSS
 					</section>
 					<section>
 						What is XSS?<p>
@@ -86,7 +90,7 @@
 					</section>
 					<section>
 						Attacker created javascript is executed in the user's browser in the context of site the user visited<p>
-						More at: <a href="owasp.org/index.php/Cross-site_Scripting_(XSS)">owasp.org/index.php/Cross-site_Scripting_(XSS)</a>
+						<small>More at: <a href="owasp.org/index.php/Cross-site_Scripting_(XSS)">owasp.org/index.php/Cross-site_Scripting_(XSS)</a></small>
 					</section>
 					<section>
 						How?<p>
@@ -106,11 +110,12 @@
 						</ul>
 					</section>
 					<section>
-						What is CSRF?
+						CSRF
 					</section>
 					<section>
 						What is CSRF?<p>
 						Cross-Site Request Forgery
+						<small>More at: <a href="https://www.owasp.org/index.php/Cross-Site_Request_Forgery_(CSRF)">owasp.org/index.php/Cross-Site_Request_Forgery_(CSRF)</a></small>
 					</section>
 					<section>
 						Forces a user to perform actions they didn't intend on a website to which they're authenticated 
@@ -148,15 +153,17 @@
 					<section>
 						<h2>Architecture</h2>
 					</section>
+				</section>
+				<section>
 					<section>
 						First, let's talk about the traditional way:
 						<ul>
 							<li>www.domain.example - contains your frontend + any monolith code</li>
-							<li>www.domain.example/api - api<li>
+							<li>www.domain.example/api - api</li>
 						</ul>
 					</section>
 					<section>
-						Where is your auth?
+						Where is your auth token?
 					</section>
 					<section>
 						Probably in a cookie<p>
@@ -168,6 +175,58 @@
 					</section>
 					<section>
 						How do you even do CSRF protection to your API? 
+					</section>
+					<section>
+						Depends on ~content types~<p>
+						<ul>
+							<li>*/*</li> 
+							<li>text/plain</li>
+							<li>application/www-url-form-encoded</li>
+							<li>application/json</li>
+						</ul>
+					</section>
+					<section>
+						<ul>
+							<li>*/*, can go cross origin</li> 
+							<li>text/plain, can go cross origin</li>
+							<li>application/www-url-form-encoded, can go cross origin</li>
+							<li>application/json, can't go cross origin without CORS</li>
+						</ul>
+					</section>
+					<section>
+						What is CORS?
+					</section>
+				</section>
+				<section>
+					<section>
+						Second way: subdomains
+					</section>
+				</section>
+				<section>
+					<section>
+						Third way: static pages
+					</section>
+					<section>
+						
+					</section>
+					<section>
+						OAuth does this (specifically OpenID Connect)
+					</section>
+				</section>
+				<section>
+					<section>
+						Fourth way: iFrames
+					</section>
+				</section>
+				<section>
+					<section>
+						Fifth way: websockets
+					</section>
+				</section>
+				<section>
+					<section>
+						Similarities<p>
+						Static pages, iFrames and websockets all have trustworthy origins in the browser
 					</section>
 				</section>
 				<section>
