--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<img src="./media/latacora-logo.png" alt="latacora logo">
 					</section>
 					<section>
-						<img src="./media/slack-logo.jpg" alt="slack logo" height="80%">
+						<img src="./media/slack-logo.svg" alt="slack logo" height="80%">
 					</section>
 				</section>
 				<section>
