--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 					<h3>$whoami</h3>
 					<section>
 						Senior Security Engineer<p>
+						a.k.a., I'm a hacker
+					</section>
+					<section>
+						You can contact me at:<p>
 						<a href="mailto:erin@frowning.wtf">erin@frowning.wtf</a><p>
 						<a href="https://www.twitter.com/efrowning">@efrowning</a><p>
 					</section>
@@ -46,6 +50,11 @@
 					</section>
 					<section>
 						<img src="./media/slack-logo.svg" alt="slack logo" height="80%">
+					</section>
+					<section>
+						<h3 font-weight="900"><font color="#38BA96">Slack is hiring!</font></h3><p>
+						Slack is used by millions of people every day – we need engineers who want to make that experience as secure and enjoyable as possible.<p>
+						<a href="slack.com/jobs" style="color:#38ba96;">slack.com/jobs</a>
 					</section>
 				</section>
 				<section>
@@ -58,8 +67,8 @@
 					</section>
 					<section>
 						Your site probably looks like this:<p>
-						API: www.frowning.wtf/api<p>
-						Frontend client: www.frowning.wtf<p>
+						API: <code>www.frowning.wtf/api</code><p>
+						Frontend client: <code>www.frowning.wtf</code><p>
 						Mobile clients
 					</section>
 					<section>
@@ -69,6 +78,10 @@
 							<li>Randomized session token</li>
 							<li>API tokens</li>
 						</ul>
+					</section>
+					<section>
+						#FIXME <p>
+						I'm going to use the term <i>auth tokens</i> to talk about the actual value, and it can refer to any of the sessions on the previous slide.
 					</section>
 					<section>
 						As you break your website out from a monolith to microservices, how do you store sessions/tokens between an API and your browser-based frontend client?
@@ -111,6 +124,7 @@
 					</section>
 					<section>
 						Cannonical testing example:
+						<code data-trim>&lt;script&rt;alert(1);&lt;/script&rt;</code>
 						<img src="./media/xss.png" alt="using alert in js plus an xss vulnerability">
 					</section>
 					<section>
@@ -172,13 +186,14 @@
 					<section>
 						First, let's talk about a typical application structure:
 						<ul>
-							<li>www.domain.example - contains your frontend + any monolith code</li>
-							<li>www.domain.example/api - api</li>
-							<li>www.domain.example/admin - administrator site</li>
+							<li><code>www.frowning.wtf</code> - contains your frontend + any monolith code</li>
+							<li><code>www.frowning.wtf/api</code> - api</li>
+							<li><code>www.frowning.wtf/admin</code> - administrator site</li>
 						</ul>
 					</section>
 					<section>
-						#FIXME add frankenstein image
+						<img src="./media/frankenstein.jpg"><p><p>
+						<small><a href="https://design.tutsplus.com/tutorials/create-a-monstrous-frankenstein-photo-manipulation-in-adobe-photoshop--cms-27322">image source</a></small>
 					</section>
 					<section>
 						Where is your authentication stored in the browser?
@@ -192,23 +207,23 @@
 						Interactions are going through XHR to /api<p>
 					</section>
 					<section>
-						How do you even do CSRF protection to your API? 
+						How do you even do CSRF protection to your API?
 					</section>
 					<section>
 						Depends on ~content types~<p>
 						<ul>
-							<li>*/*</li>
-							<li>text/plain</li>
-							<li>application/x-www-url-form-encoded</li>
-							<li>application/json</li>
+							<li><code>*/*</code></li>
+							<li><code>text/plain</code></li>
+							<li><code>application/x-www-url-form-encoded</code></li>
+							<li><code>application/json</code></li>
 						</ul>
 					</section>
 					<section>
 						<ul>
-							<li>*/*, can go cross origin</li> 
-							<li>text/plain, can go cross origin</li>
-							<li>application/x-www-url-form-encoded, can go cross origin</li>
-							<li>application/json, can't go cross origin without CORS</li>
+							<li><code>*/*</code>, can go cross origin</li> 
+							<li><code>text/plain</code>, can go cross origin</li>
+							<li><code>application/x-www-url-form-encoded</code>, can go cross origin</li>
+							<li><code>application/json</code>, can't go cross origin without CORS</li>
 						</ul>
 					</section>
 					<section>
@@ -216,13 +231,18 @@
 					</section>
 					<section>
 						CORS is Cross Origin Resource Sharing.<p>
+						We care about CORS because of the protection offered by the Same Origin Policy (SOP)<p>
+					</section>
+					<section>
+						What is the Same Origin Policy?<p>
 						Lots of requests can't be made from URL1 to URL2 if they differ on the following things:
 						<ul>
 							<li>Protocol (e.g., HTTP vs HTTPS)</li>
 							<li>Port</li>
 							<li>Host</li>
 						</ul><p>
-						https://www.example.invalid:80<p>
+						#FIXME add diagram
+						<code>https://www.frowning.wtf:80</code><p>
 						It has to be set on the assets you are accessing.
 					</section>
 				</section>
@@ -233,9 +253,9 @@
 					<section>
 						Now you have: <p>
 							<ul>
-								<li>api.frowning.wtf</li>
-								<li>www.frowning.wtf</li>
-								<li>admin.frowning.wtf</li>
+								<li><code>api.frowning.wtf</code></li>
+								<li><code>www.frowning.wtf</code></li>
+								<li><code>admin.frowning.wtf</code></li>
 							</ul>
 					</section>
 					<section>
@@ -243,7 +263,7 @@
 						The API cookie can have the secure and HTTPonly flags set.<br>
 						<small>Secure means that cookie will only be sent over HTTPS</small><br>
 						<small>HTTPonly means js can't touch it</small><br>
-						<small>Yes, the names are confusing</small>
+						<small>Yes, the names are confusing, so remember: for HTTPonly, only HTTP requests can access the cookie.</small>
 					</section>
 					<section>
 						You XHR your requests to api from www.
@@ -267,7 +287,7 @@
 					</section>
 					<section>
 						OAuth does this (specifically OpenID Connect)<p>
-						The redirect uses api.example.invalid instead of www.example.invalid<p>
+						The redirect uses <code>api.frowning.wtf</code> instead of <code>www.frowning.wtf</code><p>
 						API won't serve html or js; this keeps tokens out of anything scraping doc.location() on www.
 					</section>
 					<section>
@@ -276,15 +296,15 @@
 				</section>
 				<section>
 					<section>
-						Fourth way: iFrames
+						Improvement: use iFrames
 					</section>
 					<section>
 						Instead of using CORS, create an iFrame on www to api.<p>
-						Use the window.postMessage API<p>
+						Use the <code>window.postMessage</code> API<p>
 						<small>docs at <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage">developer.mozilla.org/en-US/docs/Web/API/Window/postMessage</a></small>
 					</section>
 					<section>
-						window.postMessage() enables cross-origin communication through the event object
+						<code>window.postMessage()</code> enables cross-origin communication through the event object
 					</section>
 					<section>
 						#FIXME make a diagram
@@ -295,7 +315,7 @@
 				</section>
 				<section>
 					<section>
-						Fifth way: websockets
+						Improvement: use websockets
 					</section>
 					<section>
 						Verify your `Origin` header.
@@ -315,11 +335,11 @@
 					</section>
 					<section>
 						Ultimately, how can you avoid CSRF hitting your API?<p>
-						By dropping all requests to API that aren't application/json
+						By dropping all requests to API that aren't <code>application/json</code>
 					</section>
 					<section>
 						How can you avoid XSS?<p>
-						You can't completely.
+						You can't completely. 
 					</section>
 					<section>
 						How do you know you have a good understanding of all this?<p>
@@ -355,6 +375,8 @@
 					{ src: 'plugin/highlight/highlight.js', async: true }
 				]
 			});
+			Reveal.configure({ slideNumber: true },
+				{ slideNumber: 'c/t' });
 		</script>
 	</body>
 </html>
