--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
 						</ul>
 					</section>
 					<section>
-						<img src="./media/frankenstein.jpg" style="width: 80%"><p><p>
-						<small><a href="https://design.tutsplus.com/tutorials/create-a-monstrous-frankenstein-photo-manipulation-in-adobe-photoshop--cms-27322">image source</a></small>
+						<img src="./media/frankenstein.png"><p>
 					</section>
 					<section>
 						Where is your authentication stored in the browser?
