Add testing materials

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</section>
 				<section>
 					All of the code-blocked <code>frowning.wtf</code> URLs are fake.<p>
-					Please don't attack my website ):
+					Please don't attack my website.
 				</section>
 				<section>
 					<section>
@@ -85,10 +85,6 @@
 						</ul>
 					</section>
 					<section>
-						#FIXME <p>
-						I'm going to use the term <i>auth tokens</i> to talk about the actual value, and it can refer to any of the sessions on the previous slide.
-					</section>
-					<section>
 						As you break your website out from a monolith to microservices, how do you store sessions/tokens between an API and your browser-based frontend client?
 					</section>
 					<section>
@@ -101,12 +97,17 @@
 					</section>
 				</section>
 				<section>
-					<h3>In this talk:</h3><p>
-					<ul>
-						<li>Common vulnerabilities that execute in a browser</li>
-						<li>Modern application structures</li>
-						<li>How to take advantage of browser-based protections</li>
-					</ul>
+					<section>
+						<h3>In this talk:</h3><p>
+						<ul>
+							<li>Common vulnerabilities that execute in a browser</li>
+							<li>Modern application structures</li>
+							<li>How to take advantage of browser-based protections</li>
+						</ul>
+					</section>
+					<section>
+						<h3>1UP</h3>
+						<img src="./media/mario.jpg">
 				</section>
 				<section>
 					<section>
