--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 					<a href="https://www.frowning.wtf/token-up">https://www.frowning.wtf/token-up</a>
 				</section>
 				<section>
-					<h3>$whoami</h3>
+					<section>
+						<h3>$whoami</h3>
+					</section>
 					<section>
 						Erin Browning<p>
 						Senior Security Engineer<p>
@@ -44,7 +46,7 @@
 					<section>
 						You can contact me at:<p>
 						<a href="mailto:erin@frowning.wtf">erin@frowning.wtf</a><p>
-						<a href="https://www.twitter.com/efrowning">@efrowning</a><p>
+						<a href="https://www.twitter.com/efrowning">@efrowning</a>
 					</section>
 					<section>
 						<img src="./media/latacora-logo.png" alt="latacora logo">
@@ -59,9 +61,11 @@
 					</section>
 				</section>
 				<section>
-					All of the code-blocked <code>frowning.wtf</code> URLs are fake.<p>
+					All of the code-blocked <code>frowning.wtf</code> URLs are fake.<br>
 					Please don't attack my website.<br>
-					<img src="./media/goose.png">
+				</section>
+				<section>
+					<img src="./media/goose.jpeg"><br>
 				</section>
 				<section>
 					<section>
@@ -145,7 +149,7 @@
 						</ul>
 					</section>
 					<section>
-						<img src="./media/csrf.png">
+						<img src="./media/csrf.jpeg">
 					</section>
 					<section>
 						What is CSRF?<p>
@@ -157,10 +161,10 @@
 					</section>
 					<section>
 						How? <p>
-						By default, cookies are included in requests sent cross domain.<p>
+						By default, cookies are included in requests sent cross domain.
 					</section>
 					<section>
-						<img src="./media/csrf-example.png" style="max-height: 100%; max-width:auto">
+						<img src="./media/csrf-example.png">
 					</section>
 					<section>
 						<img src="./media/money-is-tranferred.png">
@@ -360,12 +364,12 @@
 					</section>
 				</section>
 				<section>
-					<h3>Special Thanks</h3>
 					<section>
+						<h3>Special Thanks</h3>
 						lvh @latacora<p>
 						Leigh Honeywell @tallpoppy<p>
 						The latacora team<p>
-						The Product Security teams @Slack<p>
+						The Product Security teams @Slack
 					</section>
 				</section>
 				<section>
