--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Token Up</title>
 
-		<link rel="stylesheet" href="reveal/css/reset.css">
-		<link rel="stylesheet" href="reveal/css/reveal.css">
-		<link rel="stylesheet" href="reveal/css/theme/erin.css">
+		<link rel="stylesheet" href="./reveal/css/reset.css">
+		<link rel="stylesheet" href="./reveal/css/reveal.css">
+		<link rel="stylesheet" href="./reveal/css/theme/erin.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="reveal/lib/css/monokai.css">
@@ -18,7 +18,7 @@
 			var link = document.createElement( 'link' );
 			link.rel = 'stylesheet';
 			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'reveal/css/print/pdf.css' : 'reveal/css/print/paper.css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? './reveal/css/print/pdf.css' : './reveal/css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
 	</head>
@@ -378,7 +378,7 @@
 			</div>
 		</div>
 
-		<script src="js/reveal.js"></script>
+		<script src="./reveal/js/reveal.js"></script>
 
 		<script>
 			// More info about config & dependencies:
@@ -386,10 +386,10 @@
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
 				dependencies: [
-					{ src: 'reveal/plugin/markdown/marked.js' },
-					{ src: 'reveal/plugin/markdown/markdown.js' },
-					{ src: 'reveal/plugin/notes/notes.js', async: true },
-					{ src: 'reveal/plugin/highlight/highlight.js', async: true }
+					{ src: './reveal/plugin/markdown/marked.js' },
+					{ src: './reveal/plugin/markdown/markdown.js' },
+					{ src: './reveal/plugin/notes/notes.js', async: true },
+					{ src: './reveal/plugin/highlight/highlight.js', async: true }
 				]
 			});
 			Reveal.configure({ slideNumber: true },
