fix broken path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="./reveal/dist/reset.css">
 		<link rel="stylesheet" href="./reveal/dist/reveal.css">
-		<link rel="stylesheet" href="./reveal/dist/theme/erin.css">
+		<link rel="stylesheet" href="./reveal/css/theme/erin.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="reveal/plugin/highlight/monokai.css">
